<resources>
    <string name="app_name">ProgMobileDevices</string>
    <string name="load_activity_title">DriveNext</string>
    <string name="load_activity_subtitle">Поможем найти твою следующую поездку</string>
    <string name="load_activity_image_description">LoadImageDescription</string>

    <string name="no_internet_connection_activity_svg_description">SvgDescription</string>
    <string name="no_internet_connection_activity_title">Нет подключения к интернету</string>
    <string name="no_internet_connection_activity_subtitle">Проверьте подключение и повторите попытку</string>
    <string name="no_internet_connection_activity_button_title">Повторить попытку</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome_screen_page_1_title">Аренда автомобилей</string>

    <string name="welcome_screen_page_1_subtitle">Открой для себя удобный и доступный способ передвижения</string>
    <string name="welcome_screen_page_2_title">Безопасно и удобно</string>
    <string name="welcome_screen_page_2_subtitle">Арендуй автомобиль и наслаждайся его удобством</string>
    <string name="welcome_screen_page_3_title">Лучшие предложения</string>
    <string name="welcome_screen_page_3_subtitle">Выбирай понравившееся среди сотен доступных автомобилей</string>
    <string name="welcome_screen_next_button">Далее</string>
    <string name="welcome_screen_last_button">Поехали!</string>
    <string name="welcome_screen_last_top_text">Пропустить</string>

    <string name="select_registration_or_login_button_login">Войти</string>
    <string name="select_registration_or_login_button_registration">Зарегистрироваться</string>

    <string name="login_activity_title">Войдите в аккаунт</string>
    <string name="login_activity_subtitle">Пожалуйста, введите свои данные</string>
    <string name="login_activity_email_title">Электронная почта</string>
    <string name="login_activity_email_subtitle">Введите электронную почту</string>
    <string name="login_activity_password_title">Пароль</string>
    <string name="login_activity_password_subtitle">Введите пароль</string>
    <string name="login_activity_button_login">Войти</string>
    <string name="login_activity_button_google">Войти через Google</string>
    <string name="login_activity_forgot_password">Забыли пароль?</string>
    <string name="login_activity_registration">Зарегистироваться</string>

    <string name="registration_activity_title">Создать аккаунт</string>
    <string name="registration_activity_email_title">Электронная почта</string>
    <string name="registration_activity_email_subtitle">Введите электронную почту</string>
    <string name="registration_activity_password_title">Придумайте пароль</string>
    <string name="registration_activity_password_subtitle">Введите пароль</string>
    <string name="registration_activity_password_retry_title">Повторите пароль</string>
    <string name="registration_activity_password_retry_subtitle">Введите пароль</string>
    <string name="registration_activity_checkbox">Я согласен с условиями обслуживания и политикой конфиденциальности</string>
    <string name="registration_activity_button_next">Далее</string>

    <string name="registration_activity_2_title">Создать аккаунт</string>
    <string name="registration_activity_2_second_name_title">Фамилия</string>
    <string name="registration_activity_2_second_name_subtitle">Введите фамилию</string>
    <string name="registration_activity_2_name_title">Имя</string>
    <string name="registration_activity_2_name_subtitle">Введите имя</string>
    <string name="registration_activity_2_third_name_title">Отчество</string>
    <string name="registration_activity_2_third_name_subtitle">Введите отчество</string>
    <string name="registration_activity_2_date_title">Дата рождения</string>
    <string name="registration_activity_2_date_subtitle">DD/MM/YYYY</string>
    <string name="registration_activity_2_radio_title">Пол</string>
    <string name="registration_activity_2_radio_first">Мужской</string>
    <string name="registration_activity_2_radio_second">Женский</string>
    <string name="registration_activity_2_button_next">Далее</string>

    <string name="registration_activity_3_title">Создать аккаунт</string>
    <string name="registration_activity_3_subtitle">Добавление фотографии поможет владельцам и арендаторам узнать друг друга, когда они будут забирать машину</string>
    <string name="registration_activity_3_license_number_title">Номер водительского удостоверения</string>
    <string name="registration_activity_3_license_number_subtitle">0000000000</string>
    <string name="registration_activity_3_date_title">Дата выдачи</string>
    <string name="registration_activity_3_date_subtitle">DD/MM/YYYY</string>
    <string name="registration_activity_3_input_license_title">Загрузите фото водительского удостоверения</string>
    <string name="registration_activity_3_input_license_subtitle">Загрузить фото</string>
    <string name="registration_activity_3_input_passport_title">Загрузите фото паспорта</string>
    <string name="registration_activity_3_input_passport_subtitle">Загрузить фото</string>

    <string name="registration_activity_final_title">Пользуйтесь с удовольствием</string>
    <string name="registration_activity_final_title_2">Поздравляем</string>
    <string name="registration_activity_final_subtitle">Вы успешно зарегистрировались.  Обработка ваших персональных данных займет около двух часов. Спасибо за ожидание.</string>

    <string name="home_page_fragment_title">Давайте найдем автомобиль</string>
    <string name="home_page_fragment_search_title">Введите марку автомобиля</string>

    <string name="car_item_book_button_title">Забронировать</string>
    <string name="car_item_about_button_title">Детали</string>

    <string name="settings_main_title">Настройки</string>
    <string name="settings_main_profile_title">Иван Иванов</string>
    <string name="settings_main_profile_subtitle">ivan@mtuci.ru</string>
    <string name="settings_main_book_title">Мои бронирования</string>
    <string name="settings_main_theme_title">Тема</string>
    <string name="settings_main_notification_title">Уведомления</string>
    <string name="settings_main_money_title">Подключи свой автомобиль</string>
    <string name="settings_main_help_title">Помощь</string>
    <string name="settings_main_mail_title">Пригласи друга</string>

    <string name="settings_profile_title">Профиль</string>
    <string name="settings_profile_profile_title">Иван Иванов</string>
    <string name="settings_profile_profile_subtitle">Присоединился в июле 2024</string>
    <string name="settings_profile_mail_subtitle">ivanov@mtuci.ru</string>
    <string name="settings_profile_mail_title">Электронная почта</string>
    <string name="settings_profile_password_title">Пароль</string>
    <string name="settings_profile_password_subtitle">Поменять пароль</string>
    <string name="settings_profile_gender_title">Пол</string>
    <string name="settings_profile_gender_subtitle">Мужской</string>
    <string name="settings_profile_gmail_title">Google</string>
    <string name="settings_profile_gmail_subtitle">ivanov@gmail.com</string>
    <string name="settings_profile_logout_title">Выйти из профиля</string>

</resources>