<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="342dp"
        android:layout_height="446dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/registration_activity_2_title"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="5dp"
                app:srcCompat="@drawable/arrow_back" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/registration_activity_2_second_name_title"
            android:textColor="@color/gray_text_input"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

        <TextView
            android:id="@+id/password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/registration_activity_2_name_title"
            android:textColor="@color/gray_text_input"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondNameTextField"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/secondNameTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_activity_2_second_name_subtitle"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/secondNameInnerTextField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/montserrat_medium"
                android:background="@drawable/edit_text_background"
                android:inputType="textVisiblePassword"
                android:textColor="@color/gray"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_activity_2_name_subtitle"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/password_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameInnerTextField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/montserrat_medium"
                android:inputType="textVisiblePassword"
                android:background="@drawable/edit_text_background"
                android:textColor="@color/gray"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/thirdNameTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_activity_2_third_name_subtitle"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/password_retry_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/thirdNameInnerTextField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/montserrat_medium"
                android:inputType="textVisiblePassword"
                android:background="@drawable/edit_text_background"
                android:textColor="@color/gray"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/password_retry_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/registration_activity_2_third_name_title"
            android:textColor="@color/gray_text_input"
            android:textSize="14sp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTextField" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_activity_2_date_subtitle"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:startIconDrawable="@drawable/calendar_days"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/password_test">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateInnerTextField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/montserrat_medium"
                android:background="@drawable/edit_text_background"
                android:inputType="date"
                android:textColor="@color/gray"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/password_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/registration_activity_2_date_title"
            android:textColor="@color/gray_text_input"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thirdNameTextField" />

        <RadioGroup
            android:id="@+id/select_gender"
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/man"
                android:layout_width="136dp"
                android:layout_height="24dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/registration_activity_2_radio_first"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/woman"
                android:layout_width="136dp"
                android:layout_height="24dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/registration_activity_2_radio_second"
                android:textSize="14sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="14sp"
            android:layout_marginBottom="5dp"
            android:text="@string/registration_activity_2_radio_title"
            app:layout_constraintBottom_toTopOf="@+id/select_gender"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_next"
        android:layout_width="342dp"
        android:layout_height="52dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/registration_activity_2_button_next"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:backgroundTint="@color/button_color"
        app:cornerRadius="8dp"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>