<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/load_activity_title"
        android:textColor="@color/purple"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginStart="24dp"/>

    <!-- Подзаголовок -->
    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_activity_subtitle"
        android:textSize="14sp"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/logoTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp" />

    <!-- Изображение -->
    <ImageView
        android:id="@+id/splashImageView"
        android:layout_width="343dp"
        android:layout_height="343dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="27dp"
        android:contentDescription="@string/load_activity_image_description"
        android:scaleType="fitCenter"
        android:src="@drawable/load_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="342dp"
        android:layout_height="52dp"
        android:text="@string/select_registration_or_login_button_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="160dp"
        app:backgroundTint="@color/purple"
        app:cornerRadius="8dp"/>

    <Button
        android:id="@+id/button_registration"
        android:layout_width="342dp"
        android:layout_height="52dp"
        android:layout_marginTop="5dp"
        android:text="@string/select_registration_or_login_button_registration"
        android:textColor="@color/gray_text"
        app:backgroundTint="@color/white"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        app:rippleColor="#E2E1E1"
        app:strokeColor="#D3D0D0"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <!--    <com.google.android.material.button.MaterialButton-->
    <!--        android:id="@+id/registerButton"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Зарегистрироваться"-->
    <!--        android:textColor="#424242"-->
    <!--        android:textSize="16sp"-->
    <!--        android:background="@color/white" -->
    <!--        android:textAllCaps="false" -->
    <!--        android:paddingTop="12dp"-->
    <!--        android:paddingBottom="12dp"-->
    <!--        android:layout_margin="16dp"-->
    <!--        style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
    <!--        app:strokeColor="#E0E0E0" -->
    <!--        app:strokeWidth="1dp" -->
    <!--        app:cornerRadius="8dp"  -->
    <!--        app:elevation="0dp"  -->
    <!--        />-->